--- a/init/css/style.css
+++ b/init/css/style.css
@@ -7,6 +7,12 @@
 	License: pixelarity.com/license
 */
 
+.imgResponsive {
+  width: 100%;
+  max-width: 400px;
+  height: auto;
+}
+
 /* Basic */
 #myTopBtn {
 	display: none;
